# sharpa-urdf-usd-xml

./: README.md
wave1.3/: LICENSE
wave1.3/dual_sharpa_wave/: dual_sharpa_wave.urdf  dual_sharpa_wave.usda  dual_sharpa_wave.xml  dual_sharpa_wave_MITmode.usda  dual_sharpa_wave_with_flange.urdf  dual_sharpa_wave_with_flange.usda  dual_sharpa_wave_with_flange.xml  dual_sharpa_wave_with_flange_MITmode.usda  dual_sharpa_wave_with_wrist.urdf  dual_sharpa_wave_with_wrist.xml  dual_sharpa_wave_with_wrist_MITmode.usda
wave1.3/left_sharpa_wave/: CMakeLists.txt  left_sharpa_wave.urdf  left_sharpa_wave.usda  left_sharpa_wave.xml  left_sharpa_wave_MITmode.usda  left_sharpa_wave_with_flange.urdf  left_sharpa_wave_with_flange.xml  (+4 more)
wave1.4/dual_sharpa_wave/: dual_sharpa_wave.xml  dual_sharpa_wave_MITmode.usda  dual_sharpa_wave_with_flange.urdf  dual_sharpa_wave_with_flange.usda  dual_sharpa_wave_with_flange.xml  dual_sharpa_wave_with_wrist_MITmode.usda  package.xml
wave1.4/dual_sharpa_wave/dual_sharpa_wave/: .asset_hash  config.yaml
wave1.4/dual_sharpa_wave/dual_sharpa_wave/configuration/: dual_sharpa_wave_physics.usd
wave1.4/dual_sharpa_wave/dual_sharpa_wave_with_flange/: .asset_hash  config.yaml  dual_sharpa_wave_with_flange.usd
wave1.4/dual_sharpa_wave/dual_sharpa_wave_with_flange/configuration/: dual_sharpa_wave_with_flange_physics.usd
wave1.4/dual_sharpa_wave/dual_sharpa_wave_with_wrist/: .asset_hash  config.yaml  dual_sharpa_wave_with_wrist.usd
wave1.4/dual_sharpa_wave/dual_sharpa_wave_with_wrist/configuration/: dual_sharpa_wave_with_wrist_physics.usd
(+283 files in other folders)
